Improve responsive card display Fix some footer layout issues Limit navbar width on large screens

--- a/resources/css/civbuddy.css
+++ b/resources/css/civbuddy.css
@@ -33,9 +33,6 @@ button > span.oi {
     font-size: 0.8em;
 }
 
-div.card {
-    width: 318px;
-}
 div.card-button {
     background: none;
     border: 0;
@@ -51,9 +48,6 @@ div.card-clickable:hover > div.card-header {
     background-color: #36587d;
 }
 
-div.card.card-civbuddy {
-    max-width: 20rem;
-}
 div.card-civbuddy div.card-body {
     position: relative;
     padding-top: 0.1rem;
@@ -198,13 +192,22 @@ body {
     height: 60px; /* Set the fixed height of the footer here */
     line-height: 60px; /* Vertically center the text there */
 }
-.footer .progress {
-    height: 14px;
-    margin: 23px 0;
+@media(min-width: 1200px) {
+    .footer .container-fluid {
+        max-width: 1140px;
+    }
+}
+@media(max-width: 768px) {
+    .footer .row {
+        margin-right: 0;
+    }
+}
+.footer .row {
+    flex-wrap: nowrap;
 }
 .footer img {
-    font-size: 50px;
-    top: 5px;
+    font-size: 40px;
+    top: 3px;
 }
 .footer a.nav-link {
     margin: 0;
@@ -217,4 +220,7 @@ body {
 }
 .footer p.funds-info-text > span {
     color: white;
+}
+.footer .funds-icon {
+    min-width: 60px;
 }
